--- a/webapp/static/css/common.css
+++ b/webapp/static/css/common.css
@@ -2,6 +2,13 @@
 
 html, body{
 	height: 100%;
+	min-height: 400px;
+}
+
+.team02-body{
+	width: 100%;
+	height: 100%;
+	padding-bottom: -48px
 }
 
 .team2-header {
@@ -11,11 +18,6 @@ html, body{
 	z-index: 100;
 }
 
-.team02-body{
-	width: 100%;
-	height: 100%;
-	padding-bottom: -48px
-}
 
 .team2-menu-button{
 	color : white;
