--- a/webapp/static/css/main.css
+++ b/webapp/static/css/main.css
@@ -1,4 +1,5 @@
 html, body {
+	position: relative;
 	height: 100%;
 	min-height: 400px;
 }
@@ -57,7 +58,9 @@ html, body {
 }
 
 .main-content {
-
+	position: relative;
+	align-content: center;
+	vertical-align:middle;
 }
 
 .main-bottom {
@@ -69,4 +72,11 @@ html, body {
 
 .login-dialog {
 	display:none;
+	position: relative;
+	border: 1;
+	background-color: greeen;
+}
+
+.form-group {
+	text-align: left;
 }
