--- a/webapp/static/css/main.css
+++ b/webapp/static/css/main.css
@@ -16,13 +16,6 @@ html, body {
 	z-index: 1000;
 }
 
-.main-top-body {
-	position: relative;
-	width: 80%;
-	height: 48px;
-	margin-left: auto;
-	margin-right: auto;
-}
 
 .main-top-body>div {
 	position: absolute;
@@ -32,7 +25,7 @@ html, body {
 }
 
 .main-name {
-	text-align: center;
+	text-align: left;
 	color: white;
 	font-size: x-large;
 	width: 40%;
@@ -46,6 +39,13 @@ html, body {
 }
 
 .main-menu ul {
+	text-align: right;
+	margin-left: -5px;
+}
+@media (min-width: 650px) {
+	.main-menu ul {
+		display: block !important;
+	}
 }
 
 .main-menu ul li {
@@ -53,14 +53,72 @@ html, body {
 	font-size: medium;
 	color: white;
 	display: inline-block;
-	padding-left: 30px;
-	padding-top: 25px;
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-top: 6px;
+	padding-bottom: 6px;
+	margin-top: 8px;
+
+	border: 1px solid white;
+	border-radius: 5px;
+}
+.team02-header-content .menu-icon{
+	display: none;
 }
 
+
+@media (max-width: 650px) {
+	.main-name{
+	font-size: 15px;
+	}
+	
+	.main-menu {
+		width: 100%;
+		right: 0px;
+	}
+	.main-menu ul{
+		display: none;
+		margin-top: 55px;
+	}
+	
+	.main-menu ul li {
+		font-size: medium;
+		color: black;
+		display: inline;
+		z-index: 30;
+	
+		border: 1px solid black;
+/* 		border-radius: 5px; */
+	}
+	
+	.team02-header-content .menu-icon{
+		display: inline-block;
+		float: right;
+		margin-right: 30px;
+	}
+}
+
+
+@media (max-width:355px ){
+	.main-content h2 {
+		font-size: 20px;
+	}
+}
+
+@media (max-width:320px ){
+	.main-menu {
+		width: 200px;
+	}
+	#mainService{
+		display: inline-block;
+	}
+}
 .main-content {
+	margin-top: 100px;
 	position: relative;
 	align-content: center;
 	vertical-align:middle;
+	text-align: center;
 }
 
 .main-bottom {
