티켓팅 수정

--- a/webapp/static/css/ticketing.css
+++ b/webapp/static/css/ticketing.css
@@ -28,3 +28,11 @@
 .team2-next-button{
 	display: none;
 }
+
+#trainStationsTable{
+	display: none;
+	text-align: center;
+}
+#trainStationsTable td{
+	cursor: pointer;
+}
