--- a/webapp/static/css/info.css
+++ b/webapp/static/css/info.css
@@ -17,3 +17,17 @@
 		position: absolute;
 	}
 }
+
+.hidden-view {
+	position: relative;
+	display: none;
+}
+
+#showDivMemberInfo {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 300px;
+	padding: 20px;
+}
