--- a/webapp/static/css/ticketing.css
+++ b/webapp/static/css/ticketing.css
@@ -40,3 +40,12 @@
 #departureOrarrival{
 	text-align: center;
 }
+.closeIcon{
+	width: 30px;
+	margin-left: 94%;
+	margin-top: -30px;
+}
+#hidden-view {
+	position: relative;
+	display: none;
+}
