--- a/webapp/static/css/member.css
+++ b/webapp/static/css/member.css
@@ -1,35 +1,14 @@
-.member-info {
-	display: inline-block;
-	width: 200px;
-	border: 1px solid #999;
+html, body {
+	position: relative;
+	height: 100%;
+	min-height: 430px;
 }
 
 .member-info-center {
 	text-align: center;
 }
 
-.member-name {
-	height: 100px;
-	border-bottom: 1px solid #999;
-}
-
-.member-memberId {
-
-}
-
-.member-password {
-
-}
-
-.member-email {
-
-}
-
-.member-phoneNumber {
-
-}
-
 .bottom-buttons {
 	position: relative;
-	left:20%;
+	right: 20%;
 }
