--- a/webapp/static/css/members.css
+++ b/webapp/static/css/members.css
@@ -1,23 +1,26 @@
+html, body {
+	position: relative;
+	height: 100%;
+	min-height: 510px;
+}
+
 .member-box {
 	display: inline-block;
-	width: 100px;
+	width: 300px;
+	height: 200px;
 	border: 1px solid #999;
+}
+
+.member-box-width {
+	width: 200px;
 }
 
 .member-box-center {
 	text-align: center;
 }
 
-.member-name {
-
-}
-
-.member-memberId{
-
-}
-
-.member-email {
-
+.member-box-right {
+	text-align: right;
 }
 
 .member-paging {
